content/v1.4.5/zh/api/campaign-ext/ItemPreviewVM.md
---
title: "ItemPreviewVM"
description: "ItemPreviewVM 的自动生成类参考。"
---
# ItemPreviewVM

**Namespace:** TaleWorlds.CampaignSystem.ViewModelCollection.Inventory
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class ItemPreviewVM : ViewModel`
**Base:** `ViewModel`
**File:** `TaleWorlds.CampaignSystem.ViewModelCollection/TaleWorlds/CampaignSystem/ViewModelCollection/Inventory/ItemPreviewVM.cs`

## 概述

`ItemPreviewVM` 位于 `TaleWorlds.CampaignSystem.ViewModelCollection.Inventory`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.ViewModelCollection.Inventory` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `IsSelected` | `public bool IsSelected { get; set; }` |
| `ItemName` | `public string ItemName { get; set; }` |
| `ItemTableau` | `public ItemCollectionElementViewModel ItemTableau { get; set; }` |

## 主要方法

### OnFinalize
`public override void OnFinalize()`

**用途 / Purpose:** 在 finalize 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 ItemPreviewVM 实例
ItemPreviewVM itemPreviewVM = ...;
itemPreviewVM.OnFinalize();
```

### Open
`public void Open(EquipmentElement item)`

**用途 / Purpose:** 打开当前对象代表的资源或界面。

```csharp
// 先通过子系统 API 拿到 ItemPreviewVM 实例
ItemPreviewVM itemPreviewVM = ...;
itemPreviewVM.Open(item);
```

### ExecuteClose
`public void ExecuteClose()`

**用途 / Purpose:** 执行 close 对应的操作或工作流。

```csharp
// 先通过子系统 API 拿到 ItemPreviewVM 实例
ItemPreviewVM itemPreviewVM = ...;
itemPreviewVM.ExecuteClose();
```

### Close
`public void Close()`

**用途 / Purpose:** 关闭当前对象代表的资源或界面。

```csharp
// 先通过子系统 API 拿到 ItemPreviewVM 实例
ItemPreviewVM itemPreviewVM = ...;
itemPreviewVM.Close();
```

## 使用示例

```csharp
// 通常从对应子系统 API 获取实例后调用
ItemPreviewVM itemPreviewVM = ...;
itemPreviewVM.OnFinalize();
```

## 参见

- [本区域目录](../)